2004-04-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b60

	* Change: view_album and view_photo are valid, again.
	  (I hadn't tested with rewrite disabled)

2004-04-25 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b59

	* Change: view_album and view_photo are not valid 4.01

	* Change: More use of doctype() and common_header()

	* Fix: Removed warnings in register.php

	* Fix: manage_users, register, user_preferences, delete_user, create_user 
	are now valid HTML 4.01

	* Bugfix: Typo in manage_users.php


2004-04-25 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b58

	* Bugfix: Compatibility in edit_appearance with PHP <4.1.0, but >4.0.4 was broken.

2004-04-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b57

	* Change: Final HTML 4.01 change (for now, at least)
	  Gallery, Album, and Photo all validate as 4.01 Transitional

2004-04-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b56

	* Change: More HTML 4.01-ification
	  - Run htmlspecialchars() on popup_link() and doCommand() output.
	  - Move hidden print photos forms to the end of the page where
	    they're in a valid location.

2004-04-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b55

	* Change: Apply Opera/Safari frames fix to all browsers so that
	  albums.php becomes HTML 4.01 valid.  Updated validation links
	  for Gallery and Slideshow.

2004-04-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b54

	* Change: Change & to &amp; in ml_pulldown.inc
	  This makes album pages validate HTML 4.01, so I updated
	  the validation link.

2004-04-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b53

	* Change: Modify Location: headers to be standards compliant
	  (absoluteURI).  [RFE 939002]

2004-04-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b52

	* Change: Correct if(getAlbumName) checks to if(isAlbum)

	* Change: Remove accidental debug code from b49

2004-04-23 Jens Tkotz <jens@peino.de> 1.4.4-cvs-b51
